--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,30 @@ xcuserdata/
 *.dSYM.zip
 *.dSYM
 
+####################################
+######## OS generated files ########
+####################################
+.DS_Store
+.DS_Store?
+*.swp
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+####################################
+############# packages #############
+####################################
+*.7z  
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
